@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-28T08:15:52Z",
-  "count_outdated" : 300,
-  "uniques_outdated" : 155,
-  "count" : 327,
+  "timestamp" : "2022-05-28T16:17:16Z",
+  "count_outdated" : 302,
+  "uniques_outdated" : 156,
+  "count" : 328,
   "uniques" : 175,
   "clones" : [
-    {
-      "timestamp": "2022-05-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-15T00:00:00Z",
       "count": 2,
